docs: start milestone v1.8 Windows 硬件负载监控
- 调研：Stack/Features/Architecture/Pitfalls + 合成摘要
- REQUIREMENTS.md: 29 条需求（HWM-01~24 + TDD-01~05）
- ROADMAP.md: 4 阶段（Phase 31-34），29/29 全覆盖
- STATE.md: v1.8 初始化
- PROJECT.md: 里程碑切换至 v1.8